Progressive refine performance regression with denoising data (Cycles) #75432

Closed
opened 2020-04-06 08:38:33 +02:00 by Alaska · 9 comments
Member

System Information:
Operating system: Linux (POP!_OS 18.04)
Graphics card: GTX 1050ti

Blender Version:
Broken: Blender 2.83 (d0d20de183) 2020-04-05 22:52
Worked: Blender 2.82a

Short description of error:
Blender 2.83 shows a regression in the speed of progressive refine rendering in Cycles when denoisng data is enabled when compared to 2.82a. This happens with both CPU and GPU (Only tested CUDA) rendering.

Tests were conducted using a CPU, the Ryzen 9 3900X locked at 4.0Ghz with sufficient cooling. All tests were also conducted 2-3 times to ensure consistency:

Blender version Progressive without denoising data Progressive with denoising data Tile rendering without denoising data Tile rendering with denoising data
2.82a 30 seconds 32 seconds 30 seconds 33 seconds
2.83 26 seconds 194 seconds 25 seconds 29 seconds

I should note that I monitored CPU usage in all tests and nothing appeared too abnormal. All 24 threads were at 100% load most of the render, however with 2.83 + progressive refine + denoising data, CPU usuage would drop periodically (every 3 seconds or so - inline with the image preview of the progressive refine updating).

CPU Usage.png
This graph shows CPU usage over a 60 second period including CPU usage during the 2.83 render tests.
Key:
1 = 2.83 progressive refine without denoising data
2 = 2.83 progressive refine with denoisng data

It should be noted that 2.82a does not render the denoising data when progressive refine is enabled. The bug I'm describing in this post is most likely related to the fix for that bug.

I should also note that the progress bar for progressive refine renders with denoising data in 2.83 reachs 100% at the half way mark of the render. So if the render has 1000 samples, the progress bar will reach 100% at 500 samples.

Exact steps for others to reproduce the error:
Take any scene and render it with progressive refine and denoising data enabled in 2.83 and compare it to 2.82a.

**System Information:** Operating system: Linux (POP!_OS 18.04) Graphics card: GTX 1050ti **Blender Version:** Broken: Blender 2.83 (d0d20de183f1) 2020-04-05 22:52 Worked: Blender 2.82a **Short description of error:** Blender 2.83 shows a regression in the speed of progressive refine rendering in Cycles when denoisng data is enabled when compared to 2.82a. This happens with both CPU and GPU (Only tested CUDA) rendering. Tests were conducted using a CPU, the Ryzen 9 3900X locked at 4.0Ghz with sufficient cooling. All tests were also conducted 2-3 times to ensure consistency: | **Blender version** |**Progressive without denoising data**|**Progressive with denoising data**|**Tile rendering without denoising data**|**Tile rendering with denoising data**| | -- | -- | -- | -- | -- | |2.82a|30 seconds|32 seconds|30 seconds|33 seconds| |2.83|26 seconds|**194 seconds**|25 seconds|29 seconds| I should note that I monitored CPU usage in all tests and nothing appeared too abnormal. All 24 threads were at 100% load most of the render, however with 2.83 + progressive refine + denoising data, CPU usuage would drop periodically (every 3 seconds or so - inline with the image preview of the progressive refine updating). ![CPU Usage.png](https://archive.blender.org/developer/F8452248/CPU_Usage.png) This graph shows CPU usage over a 60 second period including CPU usage during the 2.83 render tests. Key: 1 = 2.83 progressive refine without denoising data 2 = 2.83 progressive refine with denoisng data It should be noted that 2.82a does not render the denoising data when progressive refine is enabled. The bug I'm describing in this post is most likely related to the fix for that bug. I should also note that the progress bar for progressive refine renders with denoising data in 2.83 reachs 100% at the half way mark of the render. So if the render has 1000 samples, the progress bar will reach 100% at 500 samples. **Exact steps for others to reproduce the error:** Take any scene and render it with progressive refine and denoising data enabled in 2.83 and compare it to 2.82a.
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Alaska changed title from Progressive performance regression with denoising data to Progressive refine performance regression with denoising data (Cycles) 2020-04-06 11:48:11 +02:00
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

This is sitting on the top of my "Needs Triage" queue so I thought I would confirm it.

Blender version Progressive without denoising data Progressive with denoising data Tile rendering without denoising data Tile rendering with denoising data
2.83.13 30 seconds 8:39 27 seconds 44 seconds

I misread the task at first and rendered progressive refine while denoising. I stopped at 7 samples which took 7:13

I also noticed (am confirming) that the progressive refine time estimate is calculating only the time to 50% of the samples are done, which I think is already reported.


Intel i7 950 @3.07GHz

2.83 (sub 13), branch: master, commit date: 2020-04-11 19:01, hash: 0a747cd4e3

This is sitting on the top of my "Needs Triage" queue so I thought I would confirm it. | **Blender version** |**Progressive without denoising data**|**Progressive with denoising data**|**Tile rendering without denoising data**|**Tile rendering with denoising data**| | -- | -- | -- | -- | -- | |2.83.13|30 seconds|**8:39**|27 seconds|44 seconds| I misread the task at first and rendered progressive refine while denoising. I stopped at 7 samples which took 7:13 I also noticed (am confirming) that the progressive refine time estimate is calculating only the time to 50% of the samples are done, which I think is already reported. --- Intel i7 950 @3.07GHz 2.83 (sub 13), branch: master, commit date: 2020-04-11 19:01, hash: 0a747cd4e3

This issue was referenced by blender/cycles@935da86122

This issue was referenced by blender/cycles@935da8612254a1059dd6cb2ca7f307cbdda58aaf

This issue was referenced by 05274ca829

This issue was referenced by 05274ca82971332866d94bac07c843aa2ae97f80

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-04-28 22:41:57 +02:00
Author
Member

@brecht Running tests with 2.83 05274ca829 resolves the issue, thank you, but causes other bugs to occur: #76205, #76206

@brecht Running tests with 2.83 05274ca82971 resolves the issue, thank you, but causes other bugs to occur: #76205, #76206
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:38:06 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75432
No description provided.