Fix T75432: Cycles progressive refine render slow with denoising data

Only perform denoising prefilter for the last sample, not every sample.