intern/cycles/render/tile.h
@@ -107,7 +107,7 @@ class TileManager {
   void set_samples(int num_samples);
   bool next();
   bool next_tile(Tile *&tile, int device, uint tile_types);
-  bool finish_tile(int index, bool &delete_tile);
+  bool finish_tile(const int index, const bool need_denoise, bool &delete_tile);
   bool done();
   bool has_tiles();
 
